# gluck

./: .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  TODO.md  build.rs  opencode.json  report-2026-05-27-1.md  result.md  test_diff  검색 품질 리포트 학습 가이드.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-05-23-semantic-search-design-v2.md  2026-05-23-turbovec-integration-plan.md  2026-05-24-chunking-implementation-plan.md  2026-05-25-bm25-schema-reader-upgrade-plan.md  2026-05-25-tantivy-korean-tokenizer-plan.md  swift-spinning-whale.md
docs/reports/: report-2026-05-26-1.md  report-2026-05-27-2.md  report-2026-05-27-3.md  report-2026-05-27-4.md  report-2026-05-27-5.md
docs/superpowers/plans/: 2025-05-22-color-theme.md  2025-05-24-search-modal-cleanup-plan.md  2026-05-21-gluck-implementation.md  2026-05-22-perf-optimization-plan.md  2026-05-22-semantic-search.md  2026-05-23-model2vec-embedding-replacement.md  2026-05-23-turbovec-semantic-search.md  2026-05-26-incremental-indexing.md  2026-05-26-search-quality-improvements.md  2026-05-26-search-quality-report.md  2026-05-27-fixture-category-matrix.md  2026-06-17-swift-json-yaml-syntax-highlighting.md
docs/superpowers/specs/: 2025-05-22-color-theme-design.md  2025-05-24-search-modal-cleanup-design.md  2026-05-21-gluck-design.md  2026-05-22-perf-optimization-design.md  2026-05-22-semantic-search-design.md  2026-05-23-model2vec-embedding-design.md  2026-05-26-search-quality-improvements-design.md  2026-05-26-search-quality-report-design.md  2026-05-27-fixture-category-matrix-design.md  2026-06-17-swift-json-yaml-syntax-highlighting-design.md
src/: app.rs  cli.rs  config.rs  debug.rs  lang.rs  lib.rs  main.rs  mode.rs  theme.rs
src/git/: cache.rs  commit.rs  diff.rs  mod.rs  repo.rs  store.rs  tree.rs
src/highlight/: engine.rs  mod.rs
src/search/: bm25.rs  chunk.rs  diagnose.rs  diff.rs  embedding.rs  indexer.rs  mod.rs  modal.rs  modal_state.rs  rrf.rs  silence.rs  text_prep.rs  vector.rs
src/search/chunk/: commit.rs  file.rs  mod.rs  symbol.rs
src/search/report/: fixtures.rs  metrics.rs  mod.rs  perf.rs  render.rs
src/ui/: diff.rs  layout.rs  mod.rs  pick.rs  search_modal.rs  view.rs
tests/fixtures/: search_queries.toml
