[package]
name = "gluck"
version = "0.5.7"
edition = "2021"

[[bin]]
name = "glc"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
tree-sitter-rust = "0.23"
tree-sitter-markdown-fork = "0.7.3"
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

[dev-dependencies]
tempfile = "3"
