[package]
name = "gluck"
version = "0.8.2"
edition = "2021"

[[bin]]
name = "glc"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-markdown-fork = "0.7.3"
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
unicode-width = "0.2"
dirs = "6"
model2vec-rs = { version = "0.2", features = ["hf-hub"] }
turbovec = "0.5"
tantivy = "0.22"
[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.10", features = ["openblas"] }

[dev-dependencies]
tempfile = "3"
