[package]
name = "gluck"
version = "0.9.7"
edition = "2021"

[[bin]]
name = "glc"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
comfy-table = "7"
git2 = "0.21"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tree-sitter = "0.23"
tree-sitter-highlight = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-markdown-fork = "0.7.3"
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
libc = "0.2"
humansize = "2"
unicode-width = "0.2.2"
dirs = "6"
chrono = { version = "0.4.45", features = ["serde"] }
model2vec-rs = { version = "0.2", features = ["hf-hub"] }
turbovec = "0.8"
tantivy = "0.26"
[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.14", features = ["accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.14", features = ["openblas"] }

[dev-dependencies]
tempfile = "3"
